--- a/index.html
+++ b/index.html
@@ -630,11 +630,11 @@
                     <div class="edition-selector">
                         <div id="edition2Btn" class="edition-btn active" onclick="setEdition(2)">
                             <i class="fas fa-2"></i>
-                            <span>2nd Edition</span>
+                            <span>nd Edition</span>
                         </div>
                         <div id="edition3Btn" class="edition-btn" onclick="setEdition(3)">
                             <i class="fas fa-3"></i>
-                            <span>3rd Edition</span>
+                            <span>rd Edition</span>
                         </div>
                     </div>
                 </div>
@@ -649,7 +649,7 @@
                     <div class="collapsible">
                         <div class="collapsible-header" onclick="toggleCollapsible('playerInfoCollapsible')">
                             <h3>
-                                <i class="fas fa-chevron-down"></i>
+                                <i class="fas"></i>
                                 Player Input Fields
                             </h3>
                             <svg class="collapsible-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -730,12 +730,10 @@
                     </h2>
                     <div class="mode-selector">
                         <div id="colorsOnlyBtn" class="mode-btn active" onclick="setMode('colorsOnly')">
-                            <i class="fas fa-palette"></i>
-                            Colors Only
+                            <i class="fas fa-palette"></i> Colors Only
                         </div>
                         <div id="colorsAndCharsBtn" class="mode-btn" onclick="setMode('colorsAndChars')">
-                            <i class="fas fa-user-plus"></i>
-                            Colors & Characters
+                            <i class="fas fa-user"></i> Colors & Characters
                         </div>
                     </div>
 
@@ -744,7 +742,7 @@
                             <div class="collapsible">
                                 <div class="collapsible-header" onclick="toggleCollapsible('characterOptionsCollapsible')">
                                     <h3>
-                                        <i class="fas fa-chevron-down"></i>
+                                        <i class="fas"></i>
                                         Character Options
                                     </h3>
                                     <svg class="collapsible-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
